[gd_scene load_steps=2 format=3 uid="uid://bjlwfbex7gcxh"]

[ext_resource type="Script" uid="uid://dssf1kthw6mtj" path="res://Components/Hitbox.gd" id="1_p3kl4"]

[node name="Hitbox" type="Area2D"]
script = ExtResource("1_p3kl4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
