[gd_scene load_steps=16 format=3 uid="uid://dre87iofqpfrk"]

[ext_resource type="Script" uid="uid://b10kg6kb856xr" path="res://Enemies/BaseEnemy/BaseEnemy.gd" id="1_d8e6p"]
[ext_resource type="Texture2D" uid="uid://b3qsnu86qjb8v" path="res://Enemies/Oposum/oposum.png" id="2_w4l4t"]
[ext_resource type="Script" uid="uid://dlaub0dqcbxl7" path="res://Components/Hurtbox.gd" id="3_q33g0"]
[ext_resource type="Script" uid="uid://dssf1kthw6mtj" path="res://Components/Hitbox.gd" id="4_akc86"]
[ext_resource type="Script" uid="uid://d01t5w5uthwj0" path="res://Components/HealthComponent.gd" id="5_h7ov6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ocnlb"]
atlas = ExtResource("2_w4l4t")
region = Rect2(0, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f4tl"]
atlas = ExtResource("2_w4l4t")
region = Rect2(36, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_khukr"]
atlas = ExtResource("2_w4l4t")
region = Rect2(72, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3mw"]
atlas = ExtResource("2_w4l4t")
region = Rect2(108, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xm8g"]
atlas = ExtResource("2_w4l4t")
region = Rect2(144, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kweho"]
atlas = ExtResource("2_w4l4t")
region = Rect2(180, 0, 36, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_fblae"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocnlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f4tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khukr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xm8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kweho")
}],
"loop": true,
"name": &"new_animation",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec1x8"]
size = Vector2(28, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdb6i"]
size = Vector2(28, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hvtx"]
size = Vector2(24, 3)

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_d8e6p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fblae")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.222336

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 4)
shape = SubResource("RectangleShape2D_ec1x8")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("3_q33g0")
metadata/_custom_type_script = "uid://dlaub0dqcbxl7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-3, 5)
shape = SubResource("RectangleShape2D_fdb6i")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("sprite")]
position = Vector2(0, 4)
script = ExtResource("4_akc86")
sprite = NodePath("../AnimatedSprite2D")
hit_react_length = 0.2
metadata/_custom_type_script = "uid://dssf1kthw6mtj"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-3, -9.5)
shape = SubResource("RectangleShape2D_6hvtx")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("5_h7ov6")
metadata/_custom_type_script = "uid://d01t5w5uthwj0"
